hphp/test/slow/ext_pdo/ext_pdo.php.expectf
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
int(0)
dict(2) {
  ["bar"]=>
  string(3) "ABC"
  [0]=>
  string(3) "ABC"
}
int(1)
dict(2) {
  ["bar"]=>
  string(3) "DEF"
  [0]=>
  string(3) "DEF"
}
int(0)
dict(2) {
  ["bar"]=>
  string(3) "ABC"
  [0]=>
  string(3) "ABC"
}
int(1)
dict(2) {
  ["bar"]=>
  string(3) "DEF"
  [0]=>
  string(3) "DEF"
}
vec(2) {
  string(3) "ABC"
  string(3) "DEF"
}
object(MyShadyObject) (1) {
  ["bar"]=>
  string(3) "ABC"
}
object(MyShadyObject) (1) {
  ["bar"]=>
  string(3) "DEF"
}

Warning: SQLSTATE[HY000]: General error: fetch mode requires the object parameter in %s/test/slow/ext_pdo/ext_pdo.php on line 119
string(39) "Invalid argument supplied for foreach()"
bool(true)
string(11) "MyStatement"
bool(true)
string(12) "PDOStatement"